--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Calculateur CO2",
-  "name": "Calculateur CO2",
+  "short_name": "Mes Équivalents CO2e",
+  "name": "Mes Équivalents CO2e",
   "icons": [
     {
       "src": "favicon.ico",
