--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "immutability-helper": "^3.1.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dnd": "^11.1.3",
@@ -16,8 +15,7 @@
     "react-sortable-hoc": "^1.11.0",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
-    "use-query-params": "^1.1.9",
-    "web-vitals": "^0.2.4"
+    "use-query-params": "^1.1.9"
   },
   "scripts": {
     "start": "react-scripts start",
