--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bit/datagir.simulateurs.button": "^0.0.2",
+    "@bit/datagir.simulateurs.embed-configurator": "^0.0.5",
+    "@bit/datagir.simulateurs.footer": "^0.0.1",
+    "@bit/datagir.simulateurs.modal": "^0.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -39,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "bit": {
+    "env": {},
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
   }
 }
