--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@bit/datagir.simulateurs.button": "^0.0.2",
     "@bit/datagir.simulateurs.embed-configurator": "^0.0.5",
-    "@bit/datagir.simulateurs.footer": "^0.0.1",
     "@bit/datagir.simulateurs.modal": "^0.0.2",
+    "@bit/datagir.simulateurs.button-link": "^0.0.1",
+    "@bit/datagir.simulateurs.footer": "^0.0.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
