--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@bit/datagir.simulateurs.button": "^0.0.2",
-    "@bit/datagir.simulateurs.embed-configurator": "^0.0.5",
-    "@bit/datagir.simulateurs.modal": "^0.0.2",
     "@bit/datagir.simulateurs.button-link": "^0.0.1",
+    "@bit/datagir.simulateurs.embed-configurator": "^0.0.13",
     "@bit/datagir.simulateurs.footer": "^0.0.4",
+    "@bit/datagir.simulateurs.iframe-footer": "0.0.1",
+    "@bit/datagir.simulateurs.modal": "^0.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "iframe-resizer": "^4.3.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -23,7 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && yarn iframe",
+    "iframe": "webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,9 +48,11 @@
       "last 1 safari version"
     ]
   },
-  "bit": {
-    "env": {},
-    "componentsDefaultDirectory": "components/{name}",
-    "packageManager": "npm"
+  "devDependencies": {
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0"
+  },
+  "resolutions": {
+    "react-scripts/eslint-webpack-plugin": "2.3.0"
   }
 }
