--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "Mes Équivalents CO2e",
-  "name": "Mes Équivalents CO2e",
+  "short_name": "Convertisseur CO2e",
+  "name": "Mon Convertisseur CO2e",
+  "description": "Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment.",
   "icons": [
     {
       "src": "favicon.ico",
