--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@bit/datagir.simulateurs.button": "^0.0.2",
     "@bit/datagir.simulateurs.button-link": "^0.0.1",
-    "@bit/datagir.simulateurs.embed-configurator": "^0.0.13",
-    "@bit/datagir.simulateurs.footer": "^0.0.4",
+    "@bit/datagir.simulateurs.embed-configurator": "0.0.13",
+    "@bit/datagir.simulateurs.footer": "0.0.6",
     "@bit/datagir.simulateurs.iframe-footer": "0.0.1",
     "@bit/datagir.simulateurs.modal": "^0.0.2",
     "@bit/datagir.simulateurs.update-available": "^0.0.1",
@@ -55,5 +55,10 @@
   },
   "resolutions": {
     "react-scripts/eslint-webpack-plugin": "2.3.0"
+  },
+  "bit": {
+    "env": {},
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
   }
 }
