--- a/package.json
+++ b/package.json
@@ -3,16 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@bit/datagir.simulateurs.button": "^0.0.2",
-    "@bit/datagir.simulateurs.button-link": "^0.0.1",
-    "@bit/datagir.simulateurs.embed-configurator": "0.0.13",
-    "@bit/datagir.simulateurs.footer": "0.0.6",
-    "@bit/datagir.simulateurs.iframe-footer": "0.0.1",
-    "@bit/datagir.simulateurs.modal": "^0.0.2",
-    "@bit/datagir.simulateurs.update-available": "^0.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "copy-to-clipboard": "^3.3.1",
     "iframe-resizer": "^4.3.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
