--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-sortable-hoc": "^1.11.0",
+    "react-switch": "^6.0.0",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "use-query-params": "^1.1.9"
