Footer, Share, etc...

--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "copy-to-clipboard": "^3.3.1",
     "iframe-resizer": "^4.3.1",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.13.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-share": "^4.4.0",
     "react-sortable-hoc": "^1.11.0",
     "react-switch": "^6.0.0",
+    "react-tooltip": "^4.2.17",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "use-query-params": "^1.1.9"
