--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
+
+REACT_APP_REPOSITORY_URL=$REPOSITORY_URL
+REACT_APP_URL=$URL
+REACT_APP_IFRAME_ID=datagir-mon-convertisseur-co2
