--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,23 +4,19 @@
   "description": "Visualisez facilement un poids en CO2e grâce à ce convertisseur, et découvrez quels sont les gestes climat qui comptent vraiment.",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#05386B",
+  "theme_color": "#FFFFDB",
   "background_color": "#379683"
 }
