--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Datagir",
   "dependencies": {
+    "animated-number-react": "^0.1.2",
     "axios": "^0.26.0",
     "babel-plugin-styled-components": "^2.0.6",
     "copy-to-clipboard": "^3.3.1",
@@ -27,6 +28,7 @@
     "react-query": "^3.18.1",
     "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
+    "react-slick": "^0.28.1",
     "react-switch": "^6.0.0",
     "react-tooltip": "^4.2.17",
     "styled-components": "^5.2.1",
