--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "author": "Datagir",
   "dependencies": {
+    "@dnd-kit/core": "^5.0.3",
+    "@dnd-kit/sortable": "^6.0.1",
     "animated-number-react": "^0.1.2",
     "axios": "^0.26.0",
     "babel-plugin-styled-components": "^2.0.6",
@@ -31,6 +33,7 @@
     "react-slick": "^0.28.1",
     "react-switch": "^6.0.0",
     "react-tooltip": "^4.2.17",
+    "recharts": "^2.1.9",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "twemoji": "^13.0.1",
