--- a/package.json
+++ b/package.json
@@ -7,44 +7,45 @@
     "@dnd-kit/core": "^5.0.3",
     "@dnd-kit/sortable": "^6.0.1",
     "animated-number-react": "^0.1.2",
-    "axios": "^0.26.0",
-    "babel-plugin-styled-components": "^2.0.6",
+    "axios": "^0.27.2",
+    "babel-plugin-styled-components": "^2.0.7",
     "copy-to-clipboard": "^3.3.1",
-    "gatsby": "^4.9.0",
-    "gatsby-plugin-manifest": "^4.9.0",
-    "gatsby-plugin-matomo": "^0.11.0",
-    "gatsby-plugin-offline": "^5.9.0",
-    "gatsby-plugin-preact": "^6.9.0",
-    "gatsby-plugin-react-helmet": "^5.9.0",
-    "gatsby-plugin-sitemap": "^5.9.0",
-    "gatsby-plugin-styled-components": "^5.9.0",
+    "fuse.js": "^6.5.3",
+    "gatsby": "^4.13.1",
+    "gatsby-plugin-manifest": "^4.13.0",
+    "gatsby-plugin-matomo": "^0.13.0",
+    "gatsby-plugin-offline": "^5.13.0",
+    "gatsby-plugin-preact": "^6.13.0",
+    "gatsby-plugin-react-helmet": "^5.13.0",
+    "gatsby-plugin-sitemap": "^5.13.0",
+    "gatsby-plugin-styled-components": "^5.13.0",
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "iframe-resizer": "^4.3.1",
-    "preact": "^10.5.14",
-    "preact-render-to-string": "^5.1.19",
+    "preact": "^10.7.1",
+    "preact-render-to-string": "^5.2.0",
     "query-string": "^7.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "react-query": "^3.18.1",
-    "react-scripts": "5.0.0",
+    "react-query": "^3.38.0",
+    "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
-    "react-slick": "^0.28.1",
+    "react-slick": "^0.29.0",
     "react-switch": "^6.0.0",
     "react-tooltip": "^4.2.17",
     "recharts": "^2.1.9",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
-    "twemoji": "^13.0.1",
+    "twemoji": "^14.0.2",
     "use-query-params": "^1.1.9"
   },
   "devDependencies": {
-    "gatsby-cli": "^4.9.0",
+    "gatsby-cli": "^4.13.0",
     "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.25",
-    "prettier": "^2.3.2",
-    "webpack": "^5.16.0",
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.27",
+    "prettier": "^2.6.2",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.4.0"
   },
   "scripts": {
