--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "iframe-resizer": "^4.3.1",
+    "iframe-resizer-react": "^1.1.0",
     "preact": "^10.7.1",
     "preact-render-to-string": "^5.2.0",
     "query-string": "^7.0.1",
