--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-styled-components": "^5.13.0",
     "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "html-to-image": "^1.9.0",
     "iframe-resizer": "^4.3.1",
     "iframe-resizer-react": "^1.1.0",
     "preact": "^10.7.1",
