--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animated-number-react": "^0.1.2",
     "axios": "^0.27.2",
     "babel-plugin-styled-components": "^2.0.7",
+    "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.1",
     "fuse.js": "^6.5.3",
     "gatsby": "^4.13.1",
@@ -26,6 +27,8 @@
     "iframe-resizer-react": "^1.1.0",
     "preact": "^10.7.1",
     "preact-render-to-string": "^5.2.0",
+    "puppeteer": "^13.0.1",
+    "puppeteer-core": "^13.0.1",
     "query-string": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
