--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "query-string": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-flip-toolkit": "^7.0.14",
     "react-helmet": "^6.1.0",
     "react-query": "^3.38.0",
+    "react-range": "^1.8.12",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
     "react-slick": "^0.29.0",
