--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "gatsby-plugin-react-helmet": "^5.13.0",
     "gatsby-plugin-sitemap": "^5.13.0",
     "gatsby-plugin-styled-components": "^5.13.0",
-    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "html-to-image": "^1.9.0",
     "iframe-resizer": "^4.3.1",
@@ -40,11 +39,11 @@
     "react-slick": "^0.29.0",
     "react-switch": "^6.0.0",
     "react-tooltip": "^4.2.17",
+    "react-use-query-param-string": "^2.0.3",
     "recharts": "^2.1.9",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
-    "twemoji": "^14.0.2",
-    "use-query-params": "^1.1.9"
+    "twemoji": "^14.0.2"
   },
   "devDependencies": {
     "gatsby-cli": "^4.13.0",
