--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "copy-to-clipboard": "^3.3.1",
     "fuse.js": "^6.5.3",
     "gatsby": "^4.13.1",
+    "gatsby-plugin-env-variables": "^2.2.0",
     "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-plugin-matomo": "^0.13.0",
     "gatsby-plugin-offline": "^5.13.0",
