--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "fuse.js": "^6.5.3",
     "gatsby": "^4.13.1",
     "gatsby-plugin-env-variables": "^2.2.0",
+    "gatsby-plugin-image": "^2.16.1",
     "gatsby-plugin-manifest": "^4.13.0",
     "gatsby-plugin-matomo": "^0.13.0",
     "gatsby-plugin-offline": "^5.13.0",
     "gatsby-plugin-preact": "^6.13.0",
     "gatsby-plugin-react-helmet": "^5.13.0",
+    "gatsby-plugin-sharp": "^4.16.1",
     "gatsby-plugin-sitemap": "^5.13.0",
     "gatsby-plugin-styled-components": "^5.13.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^4.16.0",
     "html-to-image": "^1.9.0",
     "iframe-resizer": "^4.3.1",
     "iframe-resizer-react": "^1.1.0",
-    "preact": "^10.8.0",
+    "preact": "^10.8.1",
     "preact-render-to-string": "^5.2.0",
     "puppeteer": "^13.0.1",
     "puppeteer-core": "^13.0.1",
