--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "iframe-resizer-react": "^1.1.0",
     "preact": "^10.8.1",
     "preact-render-to-string": "^5.2.0",
+    "publicodes": "^1.0.0-beta.43",
     "puppeteer": "^13.0.1",
     "puppeteer-core": "^13.0.1",
     "query-string": "^7.0.1",
@@ -37,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-flip-toolkit": "^7.0.14",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^8.0.3",
     "react-query": "^3.38.0",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
