--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^7.0.1",
     "@tanstack/react-query": "^4.0.10",
     "animated-number-react": "^0.1.2",
+    "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.1",
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.9.0",
