--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "iframe-resizer-react": "^1.1.0",
     "next": "^12.2.2",
     "publicodes": "^1.0.0-beta.44",
+    "puppeteer-core": "^15.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flip-toolkit": "^7.0.14",
