--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-share": "^4.4.0",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
+    "react-tooltip": "^4.2.21",
     "react-use-query-param-string": "^2.0.3",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
