--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.9.0",
     "iframe-resizer-react": "^1.1.0",
+    "matomo-tracker": "^2.2.4",
     "next": "^12.2.2",
     "publicodes": "^1.0.0-beta.44",
     "puppeteer-core": "^15.5.0",
