--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/sortable": "^7.0.1",
+    "@socialgouv/matomo-next": "^1.4.0",
     "@tanstack/react-query": "^4.0.10",
     "animated-number-react": "^0.1.2",
     "axios": "^0.27.2",
