--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
     "@dnd-kit/core": "^6.0.5",
     "@dnd-kit/sortable": "^7.0.1",
     "@socialgouv/matomo-next": "^1.4.0",
-    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query": "^4.10.1",
     "animated-number-react": "^0.1.2",
     "axios": "^0.27.2",
     "chrome-aws-lambda": "^10.1.0",
-    "copy-to-clipboard": "^3.3.1",
+    "copy-to-clipboard": "^3.3.2",
     "fuse.js": "^6.6.2",
-    "html-to-image": "^1.9.0",
+    "html-to-image": "^1.10.8",
     "iframe-resizer-react": "^1.1.0",
     "matomo-tracker": "^2.2.4",
-    "next": "^12.2.2",
+    "next": "^12.3.1",
     "next-query-params": "^4.0.0",
-    "next-sitemap": "^3.1.21",
-    "publicodes": "^1.0.0-beta.44",
+    "next-sitemap": "^3.1.23",
+    "publicodes": "^1.0.0-beta.54",
     "puppeteer-core": "^15.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-flip-toolkit": "^7.0.14",
+    "react-flip-toolkit": "^7.0.17",
     "react-highlight-words": "^0.18.0",
     "react-range": "^1.8.14",
     "react-share": "^4.4.0",
@@ -39,10 +39,10 @@
     "react-tooltip": "^4.2.21",
     "react-use-query-param-string": "^2.0.3",
     "sib-api-v3-sdk": "^8.4.2",
-    "styled-components": "^5.3.5",
+    "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
     "twemoji": "^14.0.2",
-    "use-query-params": "^2.0.0-rc.1"
+    "use-query-params": "^2.1.1"
   },
   "devDependencies": {
     "eslint": "8.20.0",
