--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
     "twemoji": "^14.0.2",
+    "use-animate-number": "^1.0.5",
     "use-query-params": "^2.1.1"
   },
   "devDependencies": {
