--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-query-params": "^4.0.0",
     "next-sitemap": "^3.1.29",
     "publicodes": "^1.0.0-beta.56",
+    "puppeteer-core": "^19.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flip-toolkit": "^7.0.17",
