--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monconvertisseurco2",
+  "name": "impactco2",
   "version": "0.2.0",
   "private": true,
   "scripts": {
@@ -14,29 +14,29 @@
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
     "@socialgouv/matomo-next": "^1.6.1",
-    "@tanstack/react-query": "^4.22.0",
+    "@tanstack/react-query": "^4.24.4",
     "animated-number-react": "^0.1.2",
-    "axios": "^1.2.3",
+    "axios": "^1.3.2",
     "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.3",
     "fuse.js": "^6.6.2",
-    "html-to-image": "^1.11.4",
+    "html-to-image": "^1.11.11",
     "iframe-resizer-react": "^1.1.0",
     "matomo-tracker": "^2.2.4",
-    "next": "^13.1.2",
+    "next": "^13.1.6",
     "next-query-params": "^4.1.0",
-    "next-sitemap": "^3.1.45",
+    "next-sitemap": "^3.1.50",
     "publicodes": "^1.0.0-beta.66",
-    "puppeteer-core": "^19.5.2",
+    "puppeteer-core": "^19.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flip-toolkit": "^7.0.17",
-    "react-highlight-words": "^0.18.0",
+    "react-highlight-words": "^0.20.0",
     "react-range": "^1.8.14",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
-    "react-tooltip": "^5.5.2",
+    "react-tooltip": "^5.7.4",
     "react-use-query-param-string": "^2.0.10",
     "sib-api-v3-sdk": "^8.5.0",
     "styled-components": "^5.3.6",
@@ -46,8 +46,8 @@
     "use-query-params": "^2.1.2"
   },
   "devDependencies": {
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
+    "eslint": "8.33.0",
+    "eslint-config-next": "13.1.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
