--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postbuild": "next-sitemap",
     "iframe": "webpack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.7",
@@ -50,9 +51,16 @@
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-better-styled-components": "^1.1.2",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-styled-components-a11y": "^0.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.1",
+    "prettier": "2.8.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
