style: add lint on commit

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,12 @@
     "plugin:react/recommended",
     "next",
     "prettier",
-    "plugin:prettier/recommended",
     "next/core-web-vitals"
   ],
   "rules": {
     "react/no-unescaped-entities": "off",
     "no-irregular-whitespace": "off",
-    "better-styled-components/sort-declarations-alphabetically": 2,
-    "prettier/prettier": ["error", { "singleQuote": true, "semi": false }]
+    "better-styled-components/sort-declarations-alphabetically": 2
   },
   "plugins": ["better-styled-components", "styled-components-a11y"],
   "env": {
