--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-styled-components-a11y": "^0.1.0",
     "husky": "^8.0.3",
@@ -61,6 +60,6 @@
     "webpack-cli": "^5.0.1"
   },
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
+    "**/*": "yarn lint --fix && prettier --write --ignore-unknown"
   }
 }
