--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,14 @@
-{ "semi": false, "singleQuote": true, "jsxSingleQuote": true }
+{
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": false,
+  "singleQuote": true,
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
+}
