--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "use-query-params": "^2.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.33.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "cypress": "^12.12.0",
+    "cypress-slow-down": "^1.2.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
