cypress 2 first tests

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
+    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
@@ -59,6 +61,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
     "prettier": "2.8.4",
+    "start-server-and-test": "^2.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
