feat: run on all branches

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Playwright Tests
 on:
   push:
-    branches: [ main, master, playwrightconf ]
+    branches: *
   pull_request:
-    branches: [ main, master, playwrightconf ]
+    branches: *
 jobs:
   test:
     timeout-minutes: 60
