--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Playwright Tests
 on:
   push:
-    branches: *
+    branches: [*]
   pull_request:
-    branches: *
+    branches: [*]
 jobs:
   test:
     timeout-minutes: 60
