--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,6 @@
 name: Playwright Tests
 on:
-  push:
-    branches: [*]
-  pull_request:
-    branches: [*]
+  deployment_status:
 jobs:
   test:
     timeout-minutes: 60
