--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "iframe": "webpack",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start:cov": "nyc next dev",
+    "test": "playwright test",
+    "clean:cov": "rm -rf .next/ coverage/ .nyc_output/",
+    "test:cov": "start-server-and-test start:cov 3000 test"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.7",
@@ -50,6 +54,7 @@
   "devDependencies": {
     "@playwright/test": "^1.33.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "babel-plugin-istanbul": "^6.1.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
@@ -58,7 +63,10 @@
     "eslint-plugin-styled-components-a11y": "^0.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
+    "nyc": "^15.1.0",
+    "playwright-test-coverage": "^1.2.12",
     "prettier": "2.8.4",
+    "start-server-and-test": "^2.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
