feat: ci test cov attempt

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install Playwright Browsers
       run: yarn playwright install --with-deps chromium
     - name: Run Playwright tests
-      run: yarn playwright test
+      run: yarn test:cov
     - uses: actions/upload-artifact@v3
       if: always()
       with:
