--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "iframe": "webpack",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 cy:run",
+    "test:component": "cypress run --component"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.7",
