--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test:e2e": "start-server-and-test dev http://localhost:3000 cy:run",
-    "test:component": "cypress run --component"
+    "test:component": "cypress run --component",
+    "test:full": "cypress run --component && start-server-and-test dev http://localhost:3000 cy:run"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.7",
@@ -64,6 +65,9 @@
     "eslint-plugin-styled-components-a11y": "^0.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "prettier": "2.8.4",
     "start-server-and-test": "^2.0.0",
     "webpack": "^5.75.0",
