--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "use-query-params": "^2.2.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^9.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "cypress": "^12.12.0",
     "eslint": "8.33.0",
