--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ yarn-error.log*
 /public/iframe.js
 
 /public/sitemap*
+
+# tests
 /test-results/
 /playwright-report/
 /playwright/.cache/
+/playwright
