--- a/package.json
+++ b/package.json
@@ -16,24 +16,23 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@testing-library/cypress": "^9.0.0",
-    "cypress": "^12.12.0",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0",
-    "mochawesome-report-generator": "^6.2.0",
-    "start-server-and-test": "^2.0.0",
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
     "@socialgouv/matomo-next": "^1.6.1",
     "@tanstack/react-query": "^4.24.4",
+    "@testing-library/cypress": "^9.0.0",
     "animated-number-react": "^0.1.2",
     "axios": "^1.3.2",
     "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.3",
+    "cypress": "^12.12.0",
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.11.11",
     "iframe-resizer-react": "^1.1.0",
     "matomo-tracker": "^2.2.4",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
     "next": "^13.1.6",
     "next-query-params": "^4.1.0",
     "next-sitemap": "^3.1.52",
@@ -51,6 +50,7 @@
     "react-tooltip": "^5.7.5",
     "react-use-query-param-string": "^2.0.10",
     "sib-api-v3-sdk": "^8.5.0",
+    "start-server-and-test": "^2.0.0",
     "styled-components": "^5.3.6",
     "styled-normalize": "^8.0.7",
     "twemoji": "^14.0.2",
@@ -68,6 +68,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
     "prettier": "2.8.4",
+    "shelljs": "^0.8.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
