--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 cy:run",
-    "test:component": "cypress run --component",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
@@ -16,12 +12,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@testing-library/cypress": "^9.0.0",
-    "cypress": "^12.12.0",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0",
-    "mochawesome-report-generator": "^6.2.0",
-    "start-server-and-test": "^2.0.0",
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
     "@socialgouv/matomo-next": "^1.6.1",
@@ -68,6 +58,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
     "prettier": "2.8.4",
+    "shelljs": "^0.8.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
