--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@playwright/test": "^1.33.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
@@ -60,8 +61,10 @@
     "eslint-plugin-styled-components-a11y": "^0.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
+    "postcss": "^8.4.24",
     "prettier": "2.8.4",
     "shelljs": "^0.8.5",
+    "tailwindcss": "^3.3.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
