--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 cy:run",
-    "test:component": "cypress run --component",
+    "test": "playwright test",
+    "test:watch": "playwright test --ui",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
@@ -16,12 +14,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@testing-library/cypress": "^9.0.0",
-    "cypress": "^12.12.0",
-    "mochawesome": "^7.1.3",
-    "mochawesome-merge": "^4.3.0",
-    "mochawesome-report-generator": "^6.2.0",
-    "start-server-and-test": "^2.0.0",
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
     "@socialgouv/matomo-next": "^1.6.1",
@@ -48,6 +40,7 @@
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-tooltip": "^5.7.5",
     "react-use-query-param-string": "^2.0.10",
     "sib-api-v3-sdk": "^8.5.0",
@@ -58,7 +51,9 @@
     "use-query-params": "^2.2.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.33.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "babel-plugin-tailwind-components": "^0.5.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
@@ -68,6 +63,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
     "prettier": "2.8.4",
+    "shelljs": "^0.8.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
