--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.3.2",
     "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.3",
+    "focus-trap-react": "^10.2.1",
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.11.11",
     "iframe-resizer-react": "^1.1.0",
