--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
+    "buildfruit": "node src/scripts/build_fruits_et_legumes.js",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "dev": "next dev",
