--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-query-params": "^4.1.0",
     "next-sitemap": "^3.1.52",
     "publicodes": "^1.0.0-beta.66",
+    "publicodes-react": "^1.0.0-beta.71",
     "puppeteer-core": "^19.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +40,8 @@
     "react-highlight-words": "^0.20.0",
     "react-hotjar": "^5.4.1",
     "react-range": "^1.8.14",
+    "react-router-dom": "^6.14.2",
+    "react-router-hash-link": "^2.4.3",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
