--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "buildfruit": "node src/scripts/build_fruits_et_legumes.js",
+    "build:fruit": "node src/scripts/build_fruits_et_legumes.js",
+    "build:boisson": "node src/scripts/build_boissons.js",
     "test": "playwright test",
     "test:ui": "playwright test --ui",
     "dev": "next dev",
