--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "next": "^13.1.6",
     "next-query-params": "^4.1.0",
     "next-sitemap": "^3.1.52",
-    "publicodes": "^1.0.0-beta.66",
     "puppeteer-core": "^19.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -52,7 +51,9 @@
     "twemoji": "^14.0.2",
     "use-animate-number": "^1.0.5",
     "use-local-storage": "^3.0.0",
-    "use-query-params": "^2.2.0"
+    "use-query-params": "^2.2.0",
+    "publicodes": "1.0.0-beta.72",
+    "publicodes-react": "1.0.0-beta.72"
   },
   "devDependencies": {
     "@playwright/test": "^1.33.0",
