--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "next": "^13.1.6",
     "next-query-params": "^4.1.0",
     "next-sitemap": "^3.1.52",
+    "publicodes": "1.0.0-beta.72",
+    "publicodes-react": "1.0.0-beta.72",
     "puppeteer-core": "^19.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +41,7 @@
     "react-highlight-words": "^0.20.0",
     "react-hotjar": "^5.4.1",
     "react-range": "^1.8.14",
+    "react-responsive-carousel": "^3.2.23",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
@@ -51,9 +54,7 @@
     "twemoji": "^14.0.2",
     "use-animate-number": "^1.0.5",
     "use-local-storage": "^3.0.0",
-    "use-query-params": "^2.2.0",
-    "publicodes": "1.0.0-beta.72",
-    "publicodes-react": "1.0.0-beta.72"
+    "use-query-params": "^2.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.33.0",
