--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
-    "iframe": "node src/scripts/build_iframe.js",
+    "iframe": "dotenv -e .env.local node src/scripts/build_iframe.js",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
@@ -24,6 +24,7 @@
     "axios": "^1.3.2",
     "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.3",
+    "dotenv-cli": "^7.3.0",
     "focus-trap-react": "^10.2.1",
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.11.11",
