--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
-    "iframe": "webpack",
+    "iframe": "dotenv -e .env.local webpack",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
@@ -24,6 +24,7 @@
     "axios": "^1.3.2",
     "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.3",
+    "dotenv-cli": "^7.3.0",
     "focus-trap-react": "^10.2.1",
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.11.11",
@@ -32,7 +33,8 @@
     "next": "^13.1.6",
     "next-query-params": "^4.1.0",
     "next-sitemap": "^3.1.52",
-    "publicodes": "^1.0.0-beta.66",
+    "publicodes": "1.0.0-beta.72",
+    "publicodes-react": "1.0.0-beta.72",
     "puppeteer-core": "^19.6.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -40,6 +42,7 @@
     "react-highlight-words": "^0.20.0",
     "react-hotjar": "^5.4.1",
     "react-range": "^1.8.14",
+    "react-responsive-carousel": "^3.2.23",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
