--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "twemoji": "^14.0.2",
     "use-animate-number": "^1.0.5",
     "use-local-storage": "^3.0.0",
-    "use-query-params": "^2.2.0"
+    "use-query-params": "^2.2.0",
+    "shelljs": "^0.8.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.33.0",
@@ -73,10 +76,7 @@
     "eslint-plugin-styled-components-a11y": "^0.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.1",
-    "prettier": "2.8.4",
-    "shelljs": "^0.8.5",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "prettier": "2.8.4"
   },
   "lint-staged": {
     "*.{js,jsx}": [
