--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
+    "hello": "echo 'blabla'",
+    "generatename": "node src/scripts/generate_name.js",
     "build:fruit": "node src/scripts/build_fruits_et_legumes.js",
     "build:boisson": "node src/scripts/build_boissons.js",
     "test": "playwright test",
@@ -31,6 +33,7 @@
     "dotenv-cli": "^7.3.0",
     "focus-trap-react": "^10.2.1",
     "fuse.js": "^6.6.2",
+    "haikunator": "^2.1.2",
     "html-to-image": "^1.11.11",
     "iframe-resizer-react": "^1.1.0",
     "matomo-tracker": "^2.2.4",
