feat: add markdown

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.11.11",
     "iframe-resizer-react": "^1.1.0",
+    "markdown-to-jsx": "^7.3.2",
     "matomo-tracker": "^2.2.4",
     "next": "^13.1.6",
     "next-query-params": "^4.1.0",
