--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "generatename": "node src/scripts/generate_name.js",
     "build:fruit": "node src/scripts/build_fruits_et_legumes.js",
     "build:boisson": "node src/scripts/build_boissons.js",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
+    "test": "NODE_ENV=test playwright test",
+    "test:ui": "NODE_ENV=test playwright test --ui",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
