refactor: fixing imports

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:boisson": "node src/scripts/build_boissons.js",
     "test": "NODE_ENV=test playwright test --reporter=list",
     "test:ui": "NODE_ENV=test playwright test --ui",
+    "testloc": "NODE_ENV=test jest --watch",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
@@ -67,15 +68,20 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.33.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "babel-plugin-tailwind-components": "^0.5.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-better-styled-components": "^1.1.2",
+    "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-styled-components-a11y": "^0.1.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.1.1",
     "prettier": "2.8.4"
   },
