--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,10 +11,11 @@
     "no-irregular-whitespace": "off",
     "better-styled-components/sort-declarations-alphabetically": 2
   },
-  "plugins": ["better-styled-components", "styled-components-a11y"],
+  "plugins": ["better-styled-components", "styled-components-a11y", "jest"],
   "env": {
     "browser": true,
     "es2022": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   }
 }
