feat: full test suite

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,7 +14,7 @@ jobs:
       run: yarn
     - name: Install Playwright Browsers
       run: yarn playwright install --with-deps chromium
-    - name: Run Playwright tests
+    - name: Run Full test suite
       run: yarn test
     - uses: actions/upload-artifact@v3
       if: always()
