--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "yarn testc && yarn teste",
     "teste": "NODE_ENV=test playwright test --reporter=list",
     "testc": "NODE_ENV=test jest",
-    "testc:w": "NODE_ENV=test jest --watch",
-    "teste:ui": "NODE_ENV=test playwright test --ui",
+    "testc:local": "NODE_ENV=test jest --watch",
+    "teste:local": "NODE_ENV=test playwright test --ui",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
