feat: all 3 levels of tests

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,4 +1,4 @@
-name: Run full test suite
+name: Testing => Run full test suite
 on:
   push:
 jobs:
@@ -12,11 +12,13 @@ jobs:
         node-version: 18
     - name: Install dependencies
       run: yarn
-    - name: Component tests with Jest
+    - name: Unit tests => with Jest
+      run: yarn testu
+    - name: Component tests => with Jest
       run: yarn testc
     - name: Install Playwright Browsers
       run: yarn playwright install --with-deps chromium
-    - name: E2E test with Playwright
+    - name: E2E test  => with Playwright
       run: yarn teste
     - uses: actions/upload-artifact@v3
       if: always()
