--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "generatename": "node src/scripts/generate_name.js",
     "build:fruit": "node src/scripts/build_fruits_et_legumes.js",
     "build:boisson": "node src/scripts/build_boissons.js",
-    "test": "yarn testc && yarn teste",
+    "test": "yarn testu && yarn testc && yarn teste",
     "teste": "NODE_ENV=test playwright test --reporter=list",
-    "testc": "NODE_ENV=test jest",
-    "testc:local": "NODE_ENV=test jest --watch",
+    "testc": "NODE_ENV=test jest ./testc",
+    "testu": "NODE_ENV=test jest ./testu",
+    "jest:local": "NODE_ENV=test jest --watch",
+    "testu:local": "NODE_ENV=test jest --watch ./testu",
+    "testc:local": "NODE_ENV=test jest --watch ./testc",
     "teste:local": "NODE_ENV=test playwright test --ui",
     "dev": "next dev",
     "build": "yarn iframe && next build",
