--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "generatename": "node src/scripts/generate_name.js",
     "build:fruit": "node src/scripts/build_fruits_et_legumes.js",
     "build:boisson": "node src/scripts/build_boissons.js",
-    "test": "NODE_ENV=test playwright test --reporter=list",
-    "test:ui": "NODE_ENV=test playwright test --ui",
+    "test": "yarn testu && yarn testc && yarn teste",
+    "teste": "NODE_ENV=test playwright test --reporter=list",
+    "testc": "NODE_ENV=test jest ./testc",
+    "testu": "NODE_ENV=test jest ./testu",
+    "jest:local": "NODE_ENV=test jest --watch",
+    "testu:local": "NODE_ENV=test jest --watch ./testu",
+    "testc:local": "NODE_ENV=test jest --watch ./testc",
+    "teste:local": "NODE_ENV=test playwright test --ui",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
@@ -66,6 +72,11 @@
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "eslint-plugin-jest": "^27.4.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "@playwright/test": "^1.33.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "babel-plugin-tailwind-components": "^0.5.10",
