--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "generatename": "node src/scripts/generate_name.js",
     "build:fruit": "node src/scripts/build_fruits_et_legumes.js",
     "build:boisson": "node src/scripts/build_boissons.js",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
+    "test": "yarn testu && yarn testc && yarn teste",
+    "teste": "NODE_ENV=test playwright test --reporter=list",
+    "testc": "NODE_ENV=test jest ./testc",
+    "testu": "NODE_ENV=test jest ./testu",
+    "jest:local": "NODE_ENV=test jest --watch",
+    "testu:local": "NODE_ENV=test jest --watch ./testu",
+    "testc:local": "NODE_ENV=test jest --watch ./testc",
+    "teste:local": "NODE_ENV=test playwright test --ui",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "postbuild": "next-sitemap",
@@ -32,9 +38,9 @@
     "dotenv-cli": "^7.3.0",
     "focus-trap-react": "^10.2.1",
     "fuse.js": "^6.6.2",
-    "haikunator": "^2.1.2",
     "html-to-image": "^1.11.11",
     "iframe-resizer-react": "^1.1.0",
+    "markdown-to-jsx": "^7.3.2",
     "matomo-tracker": "^2.2.4",
     "next": "^13.1.6",
     "next-query-params": "^4.1.0",
@@ -66,6 +72,11 @@
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "eslint-plugin-jest": "^27.4.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "@playwright/test": "^1.33.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "babel-plugin-tailwind-components": "^0.5.10",
