--- a/package.json
+++ b/package.json
@@ -23,72 +23,72 @@
     "prepare": "husky install"
   },
   "engines": {
-    "node": "18",
+    "node": "20",
     "npm": "8"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.0.7",
+    "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
-    "@socialgouv/matomo-next": "^1.6.1",
-    "@tanstack/react-query": "^4.24.4",
+    "@socialgouv/matomo-next": "^1.8.0",
+    "@tanstack/react-query": "^5.0.5",
     "animated-number-react": "^0.1.2",
-    "axios": "^1.3.2",
+    "axios": "^1.5.1",
     "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.3",
     "dotenv-cli": "^7.3.0",
-    "focus-trap-react": "^10.2.1",
+    "focus-trap-react": "^10.2.3",
     "fuse.js": "^6.6.2",
     "html-to-image": "^1.11.11",
     "iframe-resizer-react": "^1.1.0",
     "markdown-to-jsx": "^7.3.2",
     "matomo-tracker": "^2.2.4",
-    "next": "^13.1.6",
-    "next-query-params": "^4.1.0",
-    "next-sitemap": "^3.1.52",
-    "publicodes": "1.0.0-beta.72",
-    "publicodes-react": "1.0.0-beta.72",
-    "puppeteer-core": "^19.6.3",
+    "next": "13.1.6",
+    "next-query-params": "^4.2.3",
+    "next-sitemap": "^4.2.3",
+    "publicodes": "1.0.0-beta.77",
+    "publicodes-react": "1.0.0-beta.77",
+    "puppeteer-core": "^21.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-flip-toolkit": "^7.0.17",
+    "react-flip-toolkit": "^7.1.0",
     "react-highlight-words": "^0.20.0",
-    "react-hotjar": "^5.4.1",
+    "react-hotjar": "^6.1.0",
     "react-range": "^1.8.14",
     "react-responsive-carousel": "^3.2.23",
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-switch": "^7.0.0",
     "react-toggle-dark-mode": "^1.1.1",
-    "react-tooltip": "^5.7.5",
+    "react-tooltip": "^5.21.5",
     "react-use-query-param-string": "^2.0.10",
     "sib-api-v3-sdk": "^8.5.0",
-    "styled-components": "^5.3.6",
-    "styled-normalize": "^8.0.7",
+    "styled-components": "^6.1.0",
+    "styled-normalize": "^8.1.0",
     "twemoji": "^14.0.2",
     "use-animate-number": "^1.0.5",
     "use-local-storage": "^3.0.0",
-    "use-query-params": "^2.2.0",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "use-query-params": "^2.2.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.39.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
-    "eslint-plugin-jest": "^27.4.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "babel-plugin-tailwind-components": "^0.5.10",
+    "eslint": "8.52.0",
+    "eslint-config-next": "13.5.6",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-better-styled-components": "^1.1.2",
+    "eslint-plugin-jest": "^27.4.3",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-styled-components-a11y": "^2.1.31",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@playwright/test": "^1.33.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "babel-plugin-tailwind-components": "^0.5.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-styled-components-a11y": "^0.1.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.1",
-    "prettier": "2.8.4"
+    "lint-staged": "^15.0.2",
+    "prettier": "^3.0.3"
   },
   "lint-staged": {
     "*.{js,jsx}": [
