chore: run e2e on build instead of dev

--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@socialgouv/matomo-next": "^1.8.0",
     "@tanstack/react-query": "^5.0.5",
-    "animated-number-react": "^0.1.2",
     "axios": "^1.5.1",
     "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.3",
@@ -42,13 +41,14 @@
     "iframe-resizer-react": "^1.1.0",
     "markdown-to-jsx": "^7.3.2",
     "matomo-tracker": "^2.2.4",
-    "next": "13.1.6",
+    "next": "^13.5.6",
     "next-query-params": "^4.2.3",
     "next-sitemap": "^4.2.3",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
     "puppeteer-core": "^21.4.1",
     "react": "18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-flip-toolkit": "^7.1.0",
     "react-highlight-words": "^0.20.0",
@@ -65,7 +65,6 @@
     "styled-components": "^6.1.0",
     "styled-normalize": "^8.1.0",
     "twemoji": "^14.0.2",
-    "use-animate-number": "^1.0.5",
     "use-local-storage": "^3.0.0",
     "use-query-params": "^2.2.1",
     "webpack": "^5.89.0",
