--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,8 +10,15 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 20
+        cache: 'yarn'
     - name: Install dependencies
       run: yarn
+    - name: Linter
+      run: yarn lint
+    - name: Run build
+      run: yarn build
+    - name: Start server
+      run: yarn start &
     - name: Unit tests => with Jest
       run: yarn testu
     - name: Component tests => with Jest
@@ -24,5 +31,5 @@ jobs:
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: test-results/
         retention-days: 30
