--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,4 @@
 GMAP_API_KEY=<secret>
 SENDINBLUE_API_KEY=<secret>
 WEBSITE_URL=localhost:3000
+DATABASE_URL=postgresql://impactco2:impactco2@localhost:5432/impactco2
