--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
+    "@prisma/client": "5.5.0",
     "@socialgouv/matomo-next": "^1.8.0",
     "@tanstack/react-query": "^5.0.5",
     "axios": "^1.5.1",
@@ -76,6 +77,8 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "babel-plugin-tailwind-components": "^0.5.10",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
@@ -89,7 +92,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.0.2",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "prisma": "^5.5.0",
+    "typescript": "^5.2.2"
   },
   "lint-staged": {
     "*.{js,jsx}": [
