feat: Implement Sentry

--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   },
   "engines": {
     "node": "20",
-    "npm": "8"
+    "yarn": "1.22"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@prisma/client": "5.5.0",
+    "@sentry/nextjs": "^7.75.1",
     "@socialgouv/matomo-next": "^1.8.0",
     "@tanstack/react-query": "^5.0.5",
     "axios": "^1.5.1",
