chore: add bundle analyzer

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "teste:local": "NODE_ENV=test playwright test --ui",
     "dev": "next dev",
     "build": "yarn iframe && next build",
+    "build:analyze": "ANALYZE=true next build",
     "postbuild": "next-sitemap",
     "iframe": "dotenv -e .env.local webpack",
     "start": "next start",
@@ -30,6 +31,7 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@prisma/client": "5.5.0",
+    "@next/bundle-analyzer": "^14.0.1",
     "@sentry/nextjs": "^7.75.1",
     "@socialgouv/matomo-next": "^1.8.0",
     "@tanstack/react-query": "^5.0.5",
