feat: Fix breadcrumb on equivalent page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,9 +15,22 @@
     "react/no-unescaped-entities": "off",
     "no-irregular-whitespace": "off",
     "better-styled-components/sort-declarations-alphabetically": 2,
-    "react/self-closing-comp": "error"
+    "react/self-closing-comp": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "jsxSingleQuote": true
+      }
+    ]
   },
-  "plugins": ["@typescript-eslint", "prettier", "better-styled-components", "styled-components-a11y", "jest"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier",
+    "better-styled-components",
+    "styled-components-a11y",
+    "jest"
+  ],
   "env": {
     "browser": true,
     "es2022": true,
