--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -19,8 +19,6 @@
     "components/(.*)$",
     "^[./]"
   ],
-  "plugins": [
-    "@trivago/prettier-plugin-sort-imports"
-  ],
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "importOrderSortSpecifiers": true
 }
