fix: Test unitaire de la protection de l'API

--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "generatename": "node src/scripts/generate_name.js",
     "build:fruit": "node src/scripts/build_fruits_et_legumes.js",
     "build:boisson": "node src/scripts/build_boissons.js",
-    "test": "yarn testu && yarn testc && yarn teste",
-    "teste": "NODE_ENV=test playwright test --reporter=list",
+    "test": "yarn testu && yarn testc && yarn testa && yarn teste",
+    "testa": "NODE_ENV=test jest ./testa",
     "testc": "NODE_ENV=test jest ./testc",
+    "teste": "NODE_ENV=test playwright test --reporter=list",
     "testu": "NODE_ENV=test jest ./testu",
     "jest:local": "NODE_ENV=test jest --watch",
-    "testu:local": "NODE_ENV=test jest --watch ./testu",
+    "testa:local": "NODE_ENV=test jest --watch ./testa",
     "testc:local": "DEBUG_PRINT_LIMIT=10000 NODE_ENV=test jest --watch ./testc",
     "teste:local": "NODE_ENV=test playwright test --ui",
+    "testu:local": "NODE_ENV=test jest --watch ./testu",
     "dev": "next dev",
     "build": "yarn iframe && next build",
     "build:analyze": "ANALYZE=true next build",
@@ -114,13 +116,17 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.0.2",
+    "msw": "^2.0.8",
     "next-router-mock": "^0.9.10",
+    "next-test-api-route-handler": "^3.1.10",
     "nock": "^13.3.7",
+    "node-mocks-http": "^1.13.0",
     "prettier": "^3.0.3",
     "prisma": "^5.5.0",
     "storybook": "^7.5.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "undici": "^5.27.2"
   },
   "lint-staged": {
     "*.{js,jsx}": [
