--- a/.env.dist
+++ b/.env.dist
@@ -3,5 +3,7 @@ SENDINBLUE_API_KEY=<secret>
 WEBSITE_URL=localhost:3000
 DATABASE_URL=postgresql://impactco2:impactco2@localhost:5432/impactco2
 
+CONTACT_EMAIL=impactco2@ademe.fr
+
 NOTION_API_KEY=<secret>
 NOTION_API_DB_CONTACTS=<key>
