--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "generatename": "node src/scripts/generate_name.js",
-    "build:fruit": "node src/scripts/build_fruits_et_legumes.js",
-    "build:boisson": "node src/scripts/build_boissons.js",
+    "build:fruit": "ts-node src/scripts/buildFromAgribalyse.ts fruitsetlegumes",
+    "build:boisson": "ts-node src/scripts/buildFromAgribalyse.ts boissons",
     "test": "yarn testu && yarn testc && yarn testa && yarn teste",
     "testa": "NODE_ENV=test jest ./testa",
     "testc": "NODE_ENV=test jest ./testc",
