use NEXT_PUBLIC_URL everywhere

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
 GMAP_API_KEY=<secret>
 SENDINBLUE_API_KEY=<secret>
-WEBSITE_URL=localhost:3000
+NEXT_PUBLIC_URL=http://localhost:3000
 DATABASE_URL=postgresql://impactco2:impactco2@localhost:5432/impactco2
 
 CONTACT_EMAIL=impactco2@ademe.fr
