fix: Contact email

--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,7 @@ SENDINBLUE_API_KEY=<secret>
 NEXT_PUBLIC_URL=http://localhost:3000
 DATABASE_URL=postgresql://impactco2:impactco2@localhost:5432/impactco2
 
-CONTACT_EMAIL=impactco2@ademe.fr
+NEXT_PUBLIC_CONTACT_EMAIL=impactco2@ademe.fr
 
 NOTION_API_KEY=<secret>
 NOTION_API_DB_CONTACTS=<key>
